java drop spacing fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,7 @@ color: rgb(65,75,86);
 font-family: arial;
 margin: 0px;
 }
-div {
-min-height: 100vh;
-width: 100vw;
-}
+
 h1, h2 {
 text-align: center;
 }
@@ -66,4 +63,9 @@ transition: 0.6s ease;
 li:hover {
 font-size: 1.2em;
 transition: 0.6s ease;
+}
+
+#dropdown_div {
+  min-height: 10vh;
+  width: 10vw;
 }
